Fixed major bugs and added request limits
Also removed dont remove option

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="./src/icons/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="https://kliboard.xyz/src/icons/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Kliboard's sole purpose is to be the internet clipboard where anyone can make a space and save the text. Thank you for using my website!">
+  <meta property="og:title" content="Kliboard">
+  <meta property="og:description"
+    content="Kliboard's sole purpose is to be the internet clipboard where anyone can make a space and save the text.">
+  <meta property="og:image" content="https://kliboard.xyz/src/icons/board.jpg">
+  <meta property="og:url" content="https://www.kliboard.xyz">
+  <link rel="canonical" href="https://kliboard.xyz">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Language" content="en">
   <title>Kliboard</title>
 </head>
 
