--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="clip.png">
-  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/clip.png">
+  <link rel="manifest" href="/manifest.json">
   <link rel="canonical" href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
@@ -22,7 +22,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="src/main.tsx"></script>
 </body>
 
 </html>
