--- a/frontend/404.html
+++ b/frontend/404.html
@@ -1,7 +1,3 @@
 <script>
-  // Parses the URL to get the route
-  const route = window.location.pathname;
-
-  // Redirects to the route
-  window.location.href = '/Kliboard' + route;
+  window.location.href = '/Kliboard/';
 </script>
