--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/clip.png">
   <link rel="manifest" href="/manifest.json">
   <link rel="canonical" href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   <meta name="description"
     content="Kliboard's sole purpose is to be the internet clipboard where anyone can make a space and save the text. Thank you for using my website!">
   <meta property="og:title" content="Kliboard">
